--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="keywords" content="HTML, CSS, JavaScript, instagram clone, oldagram, scrimba">
         <meta name="author" content="Franky Blondeel">
         <title>Oldagram</title>
+        <details>Instagram spoof by Franky</details>
         <link rel="icon" type="image/x-icon" href="images/favicon.png">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
