--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <html>
     <head>
+        <meta charset="UTF-8">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
         <link rel="stylesheet" href="index.css">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         <meta name="keywords" content="HTML, CSS, JavaScript, instagram clone, oldagram, scrimba">
         <meta name="author" content="Franky Blondeel">
         <title>Oldagram</title>
-        <details>Instagram spoof by Franky</details>
         <link rel="icon" type="image/x-icon" href="images/favicon.png">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,9 +21,13 @@
         </header>
         <main>
             <div id="main-container" class="container">
-                
             </div>
         </main>
+        <footer>
+            <div class="container">
+                <p>End of feed</p>
+            </div>
+        </footer>
         <script src="index.js"></script>
     </body>
 </html>
