--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </main>
         <footer>
             <div class="container">
-                <p>End of feed</p>
+                End of feed
             </div>
         </footer>
         <script src="index.js"></script>
