adding refresh option

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
             </div>
         </main>
         <footer>
-                End of feed
+                End of feed<br>
+                Site broken? Try to <button id="refresh-btn">hard refresh</button>
         </footer>
         <script src="index.js"></script>
     </body>
