--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </main>
         <footer>
                 End of feed<br>
-                Site broken? Try to <button id="refresh-btn">hard refresh</button>
+                Site broken? Try to <button id="refresh-btn">hard reset</button>
         </footer>
         <script src="index.js"></script>
     </body>
