removal of footer

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
             <div id="main-container" class="container">
             </div>
         </main>
-        <footer>
+        <!-- <footer>
                 End of feed<br>
                 Site broken? Try to <a href="#" id="refresh-btn">hard reset</a>
-        </footer>
+        </footer> -->
         <script src="index.js"></script>
     </body>
 </html>
